--- a/index.html
+++ b/index.html
@@ -2,41 +2,30 @@
 <html>
 <head>
 	<title>Tic Tac Meme</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="script.js"></script>
 </head>
 <body>
 	<h1>Tic Tac Meme</h1>
-
 	<table>
 		<tr>
-			<td><button id="cell-0"></button></td>
-			<td><button id="cell-1"></button></td>
-			<td><button id="cell-2"></button></td>
+			<td><button id="0"></button></td>
+			<td><button id="1"></button></td>
+			<td><button id="2"></button></td>
 		</tr>
 		<tr>
-			<td><button id="cell-3"></button></td>
-			<td><button id="cell-4"></button></td>
-			<td><button id="cell-5"></button></td>
+			<td><button id="3"></button></td>
+			<td><button id="4"></button></td>
+			<td><button id="5"></button></td>
 		</tr>
 		<tr>
-			<td><button id="cell-6"></button></td>
-			<td><button id="cell-7"></button></td>
-			<td><button id="cell-8"></button></td>
+			<td><button id="6"></button></td>
+			<td><button id="7"></button></td>
+			<td><button id="8"></button></td>
 		</tr>
 	</table>
-
 	<div>
-		<label for="winner-select">Who wins the game?</label>
-		<select id="winner-select">
-			<option value="420">420</option>
-			<option value="69">69</option>
-			<option value="tie">Tie</option>
-		</select>
+		<button id="play-again">Play again</button>
 	</div>
-
-	<div>
-		<button id="play-again-button">Play Again</button>
-	</div>
-
 </body>
 </html>
