--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>Meme Tac Toe</h1>
-
-  <div id="game-board">
-    <div class="square" data-square=""></div>
-    <div class="square" data-square=""></div>
-    <div class="square" data-square=""></div>
-    <div class="square" data-square=""></div>
-    <div class="square" data-square=""></div>
-    <div class="square" data-square=""></div>
-    <div class="square" data-square=""></div>
-    <div class="square" data-square=""></div>
-    <div class="square" data-square=""></div>
+  <div id="header">
+    <h1>Meme Tac Toe</h1>
   </div>
-
+  <div id="game">
+    <div class="square" id="0"></div>
+    <div class="square" id="1"></div>
+    <div class="square" id="2"></div>
+    <div class="square" id="3"></div>
+    <div class="square" id="4"></div>
+    <div class="square" id="5"></div>
+    <div class="square" id="6"></div>
+    <div class="square" id="7"></div>
+    <div class="square" id="8"></div>
+  </div>
   <div id="result"></div>
   <button id="reset">Reset the Memeset</button>
 
-  <script type="text/javascript" src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
+
