--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html>
 <head>
   <title>Meme Tac Toe</title>
+  
+ <style>
+      #cursor {
+        width: 30px;
+        height: 30px;
+        position: fixed;
+        z-index: 99999;
+        pointer-events: none;
+      }
+    </style>
+    <div id="cursor"></div>
+    <script src="script.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -25,4 +37,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
